fixed clipping effect in between projects scroll

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,5 +1,5 @@
 .projects--section {
   display: flex;
   flex-direction: column;
-  gap: 15dvh;
+  gap: 20dvh;
 }
